--- a/css/sass/home_v2.scss
+++ b/css/sass/home_v2.scss
@@ -7,15 +7,20 @@ body.home {
         position: absolute;
         top: 0;
         overflow: visible;
+        .menu-inner {
+            background-color: $color2020_primary_black;
+        }
     }
     @include breakpointAbove(md) {
         > header {
-            height: 4.375rem;
-            opacity: 0;
+            height: 4.375rem; 
+            .menu-inner {
+                background: none;
+            }
         }
     }
 
-    p {
+    main p {
         font-size: $size_22;
     }
 	a.btn {
@@ -264,52 +269,52 @@ body.home {
 }
 
 // only do the side scroll image in on large screens
-@media screen and (min-width: 768px) {
-    .home:not(.ac) main .intro .mac {
-        animation: onLoadFadeIn 3s forwards, onLoadMoveIn_mac_large 3s forwards;
-    }
+// @media screen and (min-width: 768px) {
+//     .home:not(.ac) main .intro .mac {
+//         animation: onLoadFadeIn 3s forwards, onLoadMoveIn_mac_large 3s forwards;
+//     }
     
-}
+// }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    .home main .intro  .mac {
-        width: 75%;
-    }
-}
+// @media screen and (min-width: 768px) and (max-width: 1024px) {
+//     .home main .intro  .mac {
+//         width: 75%;
+//     }
+// }
 
-@media screen and (min-width: 1024px) {
-    .intro, .projectWrapper {
-        -ms-grid-column: 50% 50%;
-        grid-template-columns: 50% 50%;// 50/50 correct formatting for grid
-        -ms-grid-rows: 1fr;
-        grid-template-rows: 1fr;
-        grid-gap: 0;
-    }
-}
+// @media screen and (min-width: 1024px) {
+//     .intro, .projectWrapper {
+//         -ms-grid-column: 50% 50%;
+//         grid-template-columns: 50% 50%;// 50/50 correct formatting for grid
+//         -ms-grid-rows: 1fr;
+//         grid-template-rows: 1fr;
+//         grid-gap: 0;
+//     }
+// }
 
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
-    .home {
-        main .intro img {
-            width: 70%;
-        }
-    }
-}
+// @media screen and (min-width: 1024px) and (max-width: 1200px) {
+//     .home {
+//         main .intro img {
+//             width: 70%;
+//         }
+//     }
+// }
 
-@media screen and (min-width: 1200px) and (max-width: 1370px) {
-    .home main {
+// @media screen and (min-width: 1200px) and (max-width: 1370px) {
+//     .home main {
 
-        .intro img {
-            width: 60%;
-        }
-    }
-}
+//         .intro img {
+//             width: 60%;
+//         }
+//     }
+// }
 
-@media screen and (min-width: 1280px) {
-    .projectWrapper .trackerProject + .text {
-        max-width: 80rem;
-        margin-left: 10rem;
-    }
-}
+// @media screen and (min-width: 1280px) {
+//     .projectWrapper .trackerProject + .text {
+//         max-width: 80rem;
+//         margin-left: 10rem;
+//     }
+// }
 
 
 @keyframes bouncy {
@@ -380,18 +385,18 @@ body.home {
 @keyframes onLoadMoveIn_mac_large {
     0% {
         // transform: translate3d(-2rem, 0, 0);
-        transform: translate3d(-50%, 2rem, 0);
+        transform: translate3d(-75%, 2rem, 0);
     }
     15% {
         // transform: translate3d(2rem, 0, 0);
-        transform: translate3d(-50%, 2rem, 0);
+        transform: translate3d(-75%, 2rem, 0);
     }
 
     45% {
-        transform: translate3d(-50%, 0, 0);
+        transform: translate3d(-75%, 0, 0);
     }
     60% {
-        transform: translate3d(-50%, 0, 0);
+        transform: translate3d(-75%, 0, 0);
     }
     100% {
         transform: translate3d(0,0,0);
